objects/Account_Licensing_Instructions__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Account__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Unique__c</fullName>
        <label>Account Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Licensing Instructions</relationshipLabel>
        <relationshipName>Account_Licensing_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Licensing_Analyst_Email__c</fullName>
        <formula>CASE ( Account__r.Country__r.Name,
&quot;United States&quot;, $Setup.Licensing_Analyst__c.US_Analyst_Addr__c,
&quot;Canada&quot;, $Setup.Licensing_Analyst__c.Canada_Analyst_Addr__c,
&quot;Russian Fed.&quot;, $Setup.Licensing_Analyst__c.Russia_Analyst_Addr__c,
CASE( Account__r.Region__c, 
&quot;APAC&quot;, $Setup.Licensing_Analyst__c.APAC_Analyst_Addr__c, 
&quot;EMEA&quot;, $Setup.Licensing_Analyst__c.EMEA_Analyst_Addr__c,
&quot;LATAM&quot;, $Setup.Licensing_Analyst__c.LATAM_Analyst_Addr__c, 
&quot;North America&quot;, $Setup.Licensing_Analyst__c.North_America_Analyst_Addr__c,
&quot;&quot;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensing Analyst Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensing_Analyst_Name__c</fullName>
        <formula>CASE ( Account__r.Country__r.Name,
&quot;United States&quot;, $Setup.Licensing_Analyst__c.US_Analyst_Name__c,
&quot;Canada&quot;, $Setup.Licensing_Analyst__c.Canada_Analyst_Name__c,
&quot;Russian Fed.&quot;, $Setup.Licensing_Analyst__c.Russia_Analyst_Name__c,
CASE( Account__r.Region__c, 
&quot;APAC&quot;, $Setup.Licensing_Analyst__c.APAC_Analyst_Name__c, 
&quot;EMEA&quot;, $Setup.Licensing_Analyst__c.EMEA_Analyst_Name__c,
&quot;LATAM&quot;, $Setup.Licensing_Analyst__c.LATAM_Analyst_Name__c, 
&quot;North America&quot;, $Setup.Licensing_Analyst__c.North_America_Analyst_Name__c,
&quot;&quot;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensing Analyst Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensing_Instructions__c</fullName>
        <label>Licensing Instructions</label>
        <type>TextArea</type>
    </fields>
    <label>Account Licensing Instructions</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LISTR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Licensing Instructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>